# ppp-ultimate

./: .gitignore  CMakeLists.txt  Commons.cpp  Commons.hpp  Model.cpp  Model.hpp  README.md  Render.cpp  Render.hpp  Sphere.hpp  Vec.hpp  main.cpp  sequential.ppm
dev/: Model.cpp  Model.hpp
